--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "next": "16.0.8",
+    "prettier": "^3.7.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-server-dom-parcel": "^19.2.1",
+    "react-server-dom-turbopack": "^19.2.1",
+    "react-server-dom-webpack": "^19.2.1",
     "resend": "^6.5.2",
     "tailwind-merge": "^3.3.1"
   },
@@ -33,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
